--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -1,10 +1,12 @@
 // Modular scale is in relation to 1.2rem = 22px
 body {
 	color: rgba(0,0,0,0.85);
+	font-family: $main-body-font;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
+	font-family: $main-body-font;
 }
 
 h1 {
@@ -51,7 +53,9 @@ h3,
 }
 
 h4 {
-
+	font-family: $main-headings;
+	font-size: modular-scale(1); 
+	line-height: modular-scale(1); 
 }
 
 h5 {
@@ -84,6 +88,12 @@ blockquote {
 	line-height: modular-scale(3); 
 }
 
+figcaption {
+	font-family: $main-body-font;
+	font-size: modular-scale(0); 
+	line-height: modular-scale(1); 
+}
+
 ::selection {
 	background-color: $yellow;
 }
@@ -104,6 +114,29 @@ main {
 	}
 	p.no-space {
 		margin-bottom: 0;
+	}
+}
+
+.main-content {
+	h1, h2, h3, h4, h5, h6 {
+		color: $black;
+		margin-bottom: 20px;
+	}
+	p {
+		margin-bottom: 20px;
+	}
+}
+
+// TEAM =============================
+
+.team__creds {
+	font-size: modular-scale(0);
+}
+
+.team__single {
+	h3, 
+	figcaption {
+		margin-top: 20px;
 	}
 }
 
