--- a/custom/themes/ingenuity/src/sass/style.scss
+++ b/custom/themes/ingenuity/src/sass/style.scss
@@ -25,6 +25,7 @@
 @import "layout/header";
 @import "layout/main";
 @import "layout/sidebar";
+@import "layout/team";
 @import "layout/projects";
 
 
