--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -266,7 +266,7 @@
   margin: 0 5px;
   font-weight: 300;
   letter-spacing: 1px;
-  font-size: modular-scale(0);
+  font-size: modular-scale(0, 1rem);
   z-index: 2;
   position: relative;
 }
