--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -375,6 +375,48 @@ html {
 *, *::after, *::before {
   box-sizing: inherit; }
 
+body:before {
+  background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
+  background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
+  background-image: linear-gradient(to left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
+  content: "";
+  display: inline-block;
+  height: 100%;
+  left: 0;
+  margin: 0 auto;
+  max-width: 68.75em;
+  opacity: 0.2;
+  pointer-events: none;
+  position: fixed;
+  right: 0;
+  width: 100%;
+  z-index: 9999; }
+  @media screen and (min-width: 70em) {
+    body:before {
+      background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
+      background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
+      background-image: linear-gradient(to left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%); } }
+  @media screen and (min-width: 50em) {
+    body:before {
+      background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
+      background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
+      background-image: linear-gradient(to left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%); } }
+  @media screen and (max-width: 49em) {
+    body:before {
+      background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
+      background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
+      background-image: linear-gradient(to left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%); } }
+  @media screen and (max-width: 30em) {
+    body:before {
+      background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
+      background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
+      background-image: linear-gradient(to left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%); } }
+  @media screen and (max-height: 25em) {
+    body:before {
+      background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
+      background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
+      background-image: linear-gradient(to left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%); } }
+
 body {
   color: rgba(0, 0, 0, 0.85);
   font-family: "Audimat3000-Leger", sans-serif; }
@@ -404,6 +446,12 @@ h1 {
       line-height: 4.20873rem;
       margin-bottom: 20px;
       margin-top: 20px; } }
+
+@media screen and (min-width: 50em) {
+  .home-hero h1 {
+    font-size: 8.97413rem;
+    line-height: 8.97413rem;
+    margin: 20px 100px; } }
 
 h2 {
   font-family: "Audimat3000-Regulier", sans-serif;
@@ -486,6 +534,11 @@ main p.no-space {
   font-size: 1.5996rem;
   line-height: 2.13227rem; }
 
+.projects__panel h2 {
+  color: white;
+  font-size: 6.73228rem;
+  line-height: 6.73228rem; }
+
 span.stats_label,
 span.bolded-text {
   font-family: "Audimat3000-Regulier", sans-serif; }
@@ -563,7 +616,8 @@ figcaption.logopack__download:hover {
   -webkit-transition: color .2s ease;
           transition: color .2s ease;
   box-sizing: border-box;
-  background-color: rgba(0, 0, 0, 0.3); }
+  background-color: transparent;
+  text-transform: uppercase; }
 
 .default-nav #main-menu ul li a,
 .default-nav #mobile-menu ul li a {
@@ -579,6 +633,7 @@ figcaption.logopack__download:hover {
 #main-menu ul li ul li,
 #mobile-menu ul li ul li {
   max-height: 0;
+  top: 3px;
   position: absolute;
   -webkit-transition: max-height 0.4s ease-out;
           transition: max-height 0.4s ease-out;
@@ -1077,6 +1132,34 @@ figcaption.logopack__download:hover {
   box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
   width: 100%; }
 
+.main-header.home {
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 70px; }
+  .main-header.home .main-wrapper {
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    box-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    -o-align-items: center;
+    align-items: center;
+    -ms-flex-align: center;
+    -webkit-box-pack: end;
+    box-pack: end;
+    -webkit-justify-content: flex-end;
+    -moz-justify-content: flex-end;
+    -ms-justify-content: flex-end;
+    -o-justify-content: flex-end;
+    justify-content: flex-end;
+    -ms-flex-pack: end; }
+
 .main-header .main-wrapper {
   display: -webkit-box;
   display: -moz-box;
@@ -1195,7 +1278,7 @@ figcaption.logopack__download:hover {
 .home-hero {
   min-height: 100vh; }
   .home-hero hgroup {
-    margin-top: -110px; }
+    margin-top: 10px; }
     .home-hero hgroup img {
       width: 200px;
       height: auto;
@@ -1434,6 +1517,9 @@ aside {
       max-width: 100%;
       height: auto; }
 
+.projects__panel-container {
+  margin-top: 50px; }
+
 .projects__panel {
   width: 100%;
   height: 250px;
@@ -1443,7 +1529,30 @@ aside {
   margin-bottom: 40px;
   position: relative;
   -webkit-transition: all 0.5s;
-          transition: all 0.5s; }
+          transition: all 0.5s;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
+  -webkit-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center; }
   .projects__panel:hover .color-overlay {
     background-color: transparent;
     -webkit-filter: brightness(0.7);
@@ -1460,8 +1569,7 @@ aside {
   .projects__panel h2 {
     position: relative;
     text-align: center;
-    margin: 0 auto;
-    padding-top: 100px; }
+    margin: 0 auto; }
 
 .project__testimonial blockquote {
   margin-top: 40px;
