--- a/custom/themes/ingenuity/src/sass/helpers/_variables.scss
+++ b/custom/themes/ingenuity/src/sass/helpers/_variables.scss
@@ -1,5 +1,5 @@
 $title-font: "Audimat3000-Regulier",sans-serif;
-$p-font: "Audimat3000-Leger",sans-serif;
+$p-font: "ff-dagny-web-pro",sans-serif;
 $main-headings: "Audimat3000-Regulier",sans-serif;
 $big-headings: "open-sans", sans-serif;
 $feature-font: "adelle",serif;
