--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -87,3 +87,11 @@
 	width: 100%;
 	min-height: 70vh;
 }
+
+
+nav.nav__mobile {
+	display: none;
+	@include media($bp-med, $bp-ls-small) {
+		display: block;
+	}
+}
