--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -2,11 +2,12 @@
 body {
 	color: rgba(0,0,0,0.85);
 	font-family: $main-body-font;
+	font-weight: 400;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
-	font-family: $main-body-font;
+	font-family: $title-font;
 }
 
 h1 {
@@ -78,7 +79,7 @@ h6 {
 
 a {
 	text-decoration: none;
-	color: #000;
+	color: $grey;
 }
 
 ul.post-categories {
@@ -113,7 +114,7 @@ figcaption {
 main {
 	p { 
 		font-family: $main-body-font;
-		font-weight: 300;
+		font-weight: 200;
 		margin-top: 0;
 		margin-bottom: 30px;
 		// letter-spacing: 1px;
@@ -134,6 +135,68 @@ main {
 	}
 	p {
 		margin-bottom: 20px;
+	}
+}
+
+// CTAs =============================
+
+// Call to Action Panels
+.industry-cta {
+	color: $black;
+	text-align: center;
+	p {
+		font-size: modular-scale(0);
+		color: $black;
+		letter-spacing: 1px;
+	}
+	a {
+		color: $black;
+		font-weight: 300;
+		border-bottom: none;
+	}
+	.cta-wrapper {
+		margin: 0 15%;
+		h2 {
+			color: $black;
+			text-transform: uppercase;
+			font-weight: 400;
+			font-size: modular-scale(3); 
+			line-height: modular-scale(3, 1.3rem); 
+			@include media($bp-small) {
+				font-size: modular-scale(0, 1.3rem);
+				line-height: modular-scale(1, 1.3rem);
+			}
+		}
+	}
+}
+
+.cta-contact {
+	text-align: center;
+	margin-top: 25px;
+	a:hover button {
+		background-color: $yellow;
+		p {
+			color: $black;
+		}
+	}
+	button {
+		border: 1px solid $black;
+		background-color: $black;
+		padding: 15px 20px;
+		transition: all 0.5s;
+		p {
+			color: $yellow;
+		}
+	}
+	p {
+		text-transform: uppercase;
+		margin-bottom: 0;
+		font-size: modular-scale(0);
+		line-height: modular-scale(0);
+		@include media($bp-small) {
+			font-size: modular-scale(0, 0.8rem);
+			line-height: modular-scale(2);
+		}
 	}
 }
 
