Update: type fix - headings

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -111,6 +111,10 @@ figcaption {
 
 // MAIN ============================
 
+.navigation {
+	font-family: $main-headings;
+}
+
 main {
 	p { 
 		font-family: $main-body-font;
