--- a/custom/themes/ingenuity/src/sass/helpers/_variables.scss
+++ b/custom/themes/ingenuity/src/sass/helpers/_variables.scss
@@ -1,6 +1,7 @@
 $title-font: "Audimat3000-Regulier",sans-serif;
 $p-font: "ff-dagny-web-pro",sans-serif;
 $main-headings: "Audimat3000-Regulier",sans-serif;
+$lite-headings: "Audimat3000-Leger", sans-serif;
 $big-headings: "open-sans", sans-serif;
 $feature-font: "adelle",serif;
 $script-font: "grafolita-script",sans-serif;
@@ -9,6 +10,7 @@ $quote-src: "Lucida Grande",sans-serif;
 $bold-font: "Audimat3000-Regulier", sans-serif;
 
 $main-body-font: $p-font;
+
 
 //	Modular Scale
 $modular-scale-ratio: $perfect-fourth;
