--- a/custom/themes/ingenuity/src/sass/layout/_main.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_main.scss
@@ -68,9 +68,9 @@ body {
     blockquote {
     }
     ul {
-    	margin: 0;
+    	margin: -15px 0 15px 0;
     	li {
-    		padding: 5px 0;
+    		padding: 7px 0;
     	}
     }
 }
