Update: home hero fix

--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -3,7 +3,7 @@
 }
 
 .navigation.home-nav {
-  // padding-top: 30px;
+  padding-top: 20px;
 }
 
 // KEEPING TYPOGRAPHY STYLING HERE DUE TO COMPLEX SELECTORS
@@ -94,7 +94,7 @@
   position: absolute;
   left: -9999px;
   z-index: 9999;
-  top: auto;
+  top: 25px;
 }
 
 #main-menu ul li ul li,
