Update: single PROJECT layout

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -265,4 +265,9 @@ span.bolded-text {
 	font-family: $bold-font;
 }
 
+#left p {
+	line-height: modular-scale(0,1.2rem);
+	margin-bottom: 10px;
+}
+
 
